--- a/focusMode/src/settings/index.html
+++ b/focusMode/src/settings/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Focus Mode - Settings</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="main.tsx"></script>
-</body>
+    <script type="module" src="./main.tsx"></script>
+  </body>
 </html>
